apps/galfields/micro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro
  namespace: galfields
spec:
  selector:
    app: micro
  ports:
    - port: 8080
      targetPort: 8080
