apps/galfields/micro/ingress.yaml
# TODO: confirmar dominio real (se asume kinforgeworks.com por el nombre del repo/org).
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro
  namespace: galfields
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - galfields.kinforgeworks.com
  rules:
    - host: galfields.kinforgeworks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: micro
                port:
                  number: 8080
